@@ -56,7 +56,7 @@ typedef struct {
 
 
 PyObject *readTBF(PyObject *self, PyObject *args) {
-	PyObject *ph, *output, *frame, *fHeader, *fData, *temp;
+	PyObject *ph, *buffer, *output, *frame, *fHeader, *fData, *temp;
 	PyArrayObject *data;
 	int i;
 	TBFFrame cFrame;
@@ -79,14 +79,26 @@ PyObject *readTBF(PyObject *self, PyObject *args) {
 		return NULL;
 	}
 
-	// Setup the file handle for access
-	FILE *fh = PyFile_AsFile(ph);
-	PyFile_IncUseCount((PyFileObject *) ph);
+	// Read from the file
+	buffer = PyObject_CallMethodObjArgs(ph, PyString_FromString("read"), PyInt_FromLong(sizeof(cFrame)), NULL);
+	if( buffer == NULL ) {
+		if( PyObject_HasAttrString(ph, "read") ) {
+			PyErr_Format(PyExc_IOError, "An error occured while reading from the file");
+		} else {
+			PyErr_Format(PyExc_AttributeError, "Object does not have a read() method");
+		}
+		Py_XDECREF(data);
+		return NULL;
+	} else if( PyString_GET_SIZE(buffer) != sizeof(cFrame) ) {
+		PyErr_Format(eofError, "End of file encountered during filehandle read");
+		Py_XDECREF(data);
+		Py_XDECREF(buffer);
+		return NULL;
+	}
+	memcpy(&cFrame, PyString_AS_STRING(buffer), sizeof(cFrame));
+	Py_XDECREF(buffer);
 	
 	Py_BEGIN_ALLOW_THREADS
-	
-	// Read in a single 6168 byte frame
-	i = fread(&cFrame, sizeof(cFrame), 1, fh);
 	
 	// Swap the bits around
 	cFrame.header.frameCountWord = __bswap_32(cFrame.header.frameCountWord);
@@ -105,20 +117,7 @@ PyObject *readTBF(PyObject *self, PyObject *args) {
 	
 	Py_END_ALLOW_THREADS
 	
-	// Tear down the file handle access
-	PyFile_DecUseCount((PyFileObject *) ph);
-	
 	// Validate
-	if(ferror(fh)) {
-		PyErr_Format(PyExc_IOError, "An error occured while reading from the file");
-		Py_XDECREF(data);
-		return NULL;
-	}
-	if(feof(fh)) {
-		PyErr_Format(eofError, "End of file encountered during filehandle read");
-		Py_XDECREF(data);
-		return NULL;
-	}
 	if( !validSync5C(cFrame.header.syncWord) ) {
 		PyErr_Format(syncError, "Mark 5C sync word differs from expected");
 		Py_XDECREF(data);
