@@ -19,6 +19,7 @@
   * Added OVRO-LWA as a valid station for a few of the LSL scripts that do not depend on detailed configuration information
   * Fixed a bug in lsl.common.metabundle*.getSessionMetaData() when parsing metadata from failed observations
   * Various performance enhancements to the C extentions in lsl.correlator
+  * Updated the various lsl.reader extensions to use the read() method of the filehandle to make them more flexible
 
 1.2.0
   * Added a new lsl.common.adp module to help describe ADP
